
.. contents::


Changes Since 0.5
=================

* General:

  - Backwards-compatible changes to remove python2.6 -3 deprecation warnings
  - Text nodes now subclass unicode rather than UserString
    (which is gone in python 3.0)

* docutils/nodes.py:

  - Added ``Element.__contains__`` method, for the in-operator.

* docutils/writers/latex2e/__init__.py:

  - Apply [ 2051599 ] multi-page tables in latex writer (from pabigot).
  - Fix: for spanish ``~n`` is ``n`` with tilde above, change to ``~{}n``.
  - Change: has_key for dictionaries (not Nodes) to in-operator.
  - Merge adjacent citations into one latex cite command.

Release 0.5 (2008-06-25)
========================

* docutils/languages/he.py: Added to project: Hebrew mappings by
  Meir Kriheli.

* docutils/parsers/rst/languages/he.py: Added to project: Hebrew 
  mappings by Meir Kriheli.

* docutils/frontend.py:

  - Configuration files are now assumed and required to be
    UTF-8-encoded.
  - Paths of applied configuration files are now recorded in the
    runtime setting ``_config_files`` (accessible via
    ``--dump-settings``).
  - Added ``--strip-elements-with-class`` and ``--strip-class``
    options (``strip_elements_with_classes`` and ``strip_classes``
    settings).

* docutils/io.py:

  - Added code to determine the input encoding from data: encoding
    declarations or the presence of byte order marks (UTF-8 & UTF-16).
  - Added support for IronPython 1.0.

* docutils/nodes.py:

  - Added ``document.__getstate__`` method, for pickling.

* docutils/parsers/rst/states.py:

  - Allow ``+`` and ``:`` in reference names.
  - Unquoted targets beginning with an underscore (``.. __target:
    URI``) are no longer accepted.
  - Added support for multiple attributions in a physical block quote
    (indented text block), dividing it into multiple logical block
    quotes.
  - Added support for unicode bullets in bullet lists: "•", "‣", and
    "⁃".